# kstars

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  load_data.sh  main.py  single_file.txt
css/: style.css
data/original/: ActionScript.csv  C#.csv  C++.csv  C.csv  CSS.csv  Clojure.csv  CoffeeScript.csv  DM.csv  Dart.csv  Elixir.csv  Go.csv  Groovy.csv  HTML.csv  Haskell.csv  Java.csv  JavaScript.csv  Julia.csv  Kotlin.csv  Lua.csv  MATLAB.csv  Objective-C.csv  PHP.csv  Perl.csv  PowerShell.csv  Python.csv  R.csv  Ruby.csv  Rust.csv  Scala.csv  Shell.csv  Swift.csv  TeX.csv  TypeScript.csv  Vim script.csv
data/processed/: ActionScript.csv  C++.csv  C.csv  CPP.csv  CSS.csv  CSharp.csv  Clojure.csv  CoffeeScript.csv  DM.csv  Dart.csv  Elixir.csv  Go.csv  Groovy.csv  HTML.csv  Haskell.csv  Java.csv  JavaScript.csv  Julia.csv  Kotlin.csv  Lua.csv  MATLAB.csv  Objective-C.csv  PHP.csv  Perl.csv  PowerShell.csv  Prolog.csv  Python.csv  R.csv  Ruby.csv  Rust.csv  Scala.csv  Shell.csv  Swift.csv  TeX.csv  TypeScript.csv  Vim script.csv  Vim-script.csv  top10_ActionScript.csv  top10_C.csv  top10_CPP.csv  (+33 more)
js/: language-page.js  main.js  sortable.min.js
kstars/: Cargo.toml  Dockerfile  README.md  main.py  prefect-flow.py  prefect.yml  requirements.txt
kstars/crates/data_loader/: Cargo.toml
kstars/crates/data_loader/src/: main.rs
kstars/crates/frontend/: Cargo.toml  Dioxus.toml
kstars/crates/frontend/assets/css/: style.css
kstars/crates/frontend/src/: data_loader.rs  data_parser.rs  main.rs  schema.rs
kstars/crates/frontend/src/components/: home.rs  language_page.rs  mod.rs  sortable_table.rs
kstars/src/: main.rs
pages/: language.html
src/: main.rs
