[workspace.package]
name = "kstars"
authors = ["Luiz Otavio V. B. Oliveira <luiz.vbo@gmail.com>"]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/frontend",
    "crates/data_loader",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
