[package]
name = "data_loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "time",
] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
csv = "1.1"
