[package]
name = "frontend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
gloo-net = { version = "0.6.0", features = ["http"] }
csv = "1.3.1"
dioxus = { version = "0.6.3", features = ["router"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
