[package]
name = "frontend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
# gloo-net = { version = "0.6.0", features = ["http"] }
csv = "1.3.1"
dioxus = { version = "0.6.3", features = ["router"] }
reqwest = "0.12.23"
dioxus-logger = "0.6.2"
gloo-storage = "0.3.0"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "Element", "DomTokenList"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
